edit feature was implemented

--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -189,7 +189,7 @@
                             <div class="font-semibold text-silver-chalice">Accoun type:</div>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">Employer</p>
+                            <p class="font-semibold">Employer</p>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -197,7 +197,20 @@
                             <div class="font-semibold text-silver-chalice">Name:</div>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">Vaidotas Rimeikis</p>
+                            <div class="editable-text js-editable-text" contenteditable="true">
+                              <div class="editable-text__title">Vaidotas Rimeikis</div>
+                              <div class="editable-text__append">
+                                <div class="editable-text__append-icon">
+                                  <svg class="svg-icon svg-icon--alto" width="12" height="12">
+                                    <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
+                                  </svg>
+                                </div>
+                                <div class="editable-text__append-button">
+                                  <button class="button button--inline button--color-surfie-green" type="button">Save
+                                  </button>
+                                </div>
+                              </div>
+                            </div>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -205,7 +218,20 @@
                             <div class="font-semibold text-silver-chalice">Email:</div>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">lj.baranauskas@gmail.com</p>
+                            <div class="editable-text js-editable-text" contenteditable="true">
+                              <div class="editable-text__title">lj.baranauskas@gmail.com</div>
+                              <div class="editable-text__append">
+                                <div class="editable-text__append-icon">
+                                  <svg class="svg-icon svg-icon--alto" width="12" height="12">
+                                    <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
+                                  </svg>
+                                </div>
+                                <div class="editable-text__append-button">
+                                  <button class="button button--inline button--color-surfie-green" type="button">Save
+                                  </button>
+                                </div>
+                              </div>
+                            </div>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -213,7 +239,20 @@
                             <div class="font-semibold text-silver-chalice">Phone:</div>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">+3706891864</p>
+                            <div class="editable-text js-editable-text" contenteditable="true">
+                              <div class="editable-text__title">+3706891864</div>
+                              <div class="editable-text__append">
+                                <div class="editable-text__append-icon">
+                                  <svg class="svg-icon svg-icon--alto" width="12" height="12">
+                                    <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
+                                  </svg>
+                                </div>
+                                <div class="editable-text__append-button">
+                                  <button class="button button--inline button--color-surfie-green" type="button">Save
+                                  </button>
+                                </div>
+                              </div>
+                            </div>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -221,7 +260,20 @@
                             <div class="font-semibold text-silver-chalice">Native:</div>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">Lithuanian</p>
+                            <div class="editable-text js-editable-text" contenteditable="true">
+                              <div class="editable-text__title">Lithuanian</div>
+                              <div class="editable-text__append">
+                                <div class="editable-text__append-icon">
+                                  <svg class="svg-icon svg-icon--alto" width="12" height="12">
+                                    <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
+                                  </svg>
+                                </div>
+                                <div class="editable-text__append-button">
+                                  <button class="button button--inline button--color-surfie-green" type="button">Save
+                                  </button>
+                                </div>
+                              </div>
+                            </div>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -229,7 +281,20 @@
                             <div class="font-semibold text-silver-chalice">Address:</div>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold text-surfie-green">Adres 5g.</p>
+                            <div class="editable-text js-editable-text" contenteditable="true">
+                              <div class="editable-text__title">Adres 5g.</div>
+                              <div class="editable-text__append">
+                                <div class="editable-text__append-icon">
+                                  <svg class="svg-icon svg-icon--alto" width="12" height="12">
+                                    <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
+                                  </svg>
+                                </div>
+                                <div class="editable-text__append-button">
+                                  <button class="button button--inline button--color-surfie-green" type="button">Save
+                                  </button>
+                                </div>
+                              </div>
+                            </div>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -237,7 +302,20 @@
                             <div class="font-semibold text-silver-chalice">Zip code:</div>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">LT-4421</p>
+                            <div class="editable-text js-editable-text" contenteditable="true">
+                              <div class="editable-text__title">LT-4421</div>
+                              <div class="editable-text__append">
+                                <div class="editable-text__append-icon">
+                                  <svg class="svg-icon svg-icon--alto" width="12" height="12">
+                                    <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
+                                  </svg>
+                                </div>
+                                <div class="editable-text__append-button">
+                                  <button class="button button--inline button--color-surfie-green" type="button">Save
+                                  </button>
+                                </div>
+                              </div>
+                            </div>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -245,7 +323,20 @@
                             <div class="font-semibold text-silver-chalice">City:</div>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">Vilnius</p>
+                            <div class="editable-text js-editable-text" contenteditable="true">
+                              <div class="editable-text__title">Vilnius</div>
+                              <div class="editable-text__append">
+                                <div class="editable-text__append-icon">
+                                  <svg class="svg-icon svg-icon--alto" width="12" height="12">
+                                    <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
+                                  </svg>
+                                </div>
+                                <div class="editable-text__append-button">
+                                  <button class="button button--inline button--color-surfie-green" type="button">Save
+                                  </button>
+                                </div>
+                              </div>
+                            </div>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -253,7 +344,20 @@
                             <div class="font-semibold text-silver-chalice">Country:</div>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">Lithuania</p>
+                            <div class="editable-text js-editable-text" contenteditable="true">
+                              <div class="editable-text__title">Lithuania</div>
+                              <div class="editable-text__append">
+                                <div class="editable-text__append-icon">
+                                  <svg class="svg-icon svg-icon--alto" width="12" height="12">
+                                    <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
+                                  </svg>
+                                </div>
+                                <div class="editable-text__append-button">
+                                  <button class="button button--inline button--color-surfie-green" type="button">Save
+                                  </button>
+                                </div>
+                              </div>
+                            </div>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -261,7 +365,7 @@
                             <div class="font-semibold text-silver-chalice">Birth day:</div>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">2019-04-01</p>
+                            <p class="font-semibold">2019-04-01</p>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -269,7 +373,20 @@
                             <div class="font-semibold text-silver-chalice">Additional:</div>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">Sample sample sample sample sample sample</p>
+                            <div class="editable-text js-editable-text" contenteditable="true">
+                              <div class="editable-text__title">Sample sample sample sample sample sample</div>
+                              <div class="editable-text__append">
+                                <div class="editable-text__append-icon">
+                                  <svg class="svg-icon svg-icon--alto" width="12" height="12">
+                                    <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
+                                  </svg>
+                                </div>
+                                <div class="editable-text__append-button">
+                                  <button class="button button--inline button--color-surfie-green" type="button">Save
+                                  </button>
+                                </div>
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -284,7 +401,7 @@
                             <p class="font-semibold text-silver-chalice">Holder type:</p>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">Lukas Baranauskas</p>
+                            <p class="font-semibold">Lukas Baranauskas</p>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -292,7 +409,7 @@
                             <p class="font-semibold text-silver-chalice">Bank No:</p>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">LT 99992192929219</p>
+                            <p class="font-semibold">LT 99992192929219</p>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -300,7 +417,7 @@
                             <p class="font-semibold text-silver-chalice">Bank:</p>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">AB “LUMINOR”</p>
+                            <p class="font-semibold">AB “LUMINOR”</p>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -308,7 +425,7 @@
                             <p class="font-semibold text-silver-chalice">Swift:</p>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">SW2122</p>
+                            <p class="font-semibold">SW2122</p>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -316,7 +433,7 @@
                             <p class="font-semibold text-silver-chalice">Bank Co:</p>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">12232</p>
+                            <p class="font-semibold">12232</p>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -324,7 +441,20 @@
                             <p class="font-semibold text-silver-chalice">Paypal:</p>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold ">info@irina.com </p>
+                            <div class="editable-text js-editable-text" contenteditable="true">
+                              <div class="editable-text__title">info@irina.com</div>
+                              <div class="editable-text__append">
+                                <div class="editable-text__append-icon">
+                                  <svg class="svg-icon svg-icon--alto" width="12" height="12">
+                                    <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
+                                  </svg>
+                                </div>
+                                <div class="editable-text__append-button">
+                                  <button class="button button--inline button--color-surfie-green" type="button">Save
+                                  </button>
+                                </div>
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
