alert component was created

--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -125,14 +125,29 @@
     </div>
     <div class="settings-page__wrap">
       <div class="container">
-        <div class="settings-page__title">
-          <h2 class="text-surfie-green">Settings</h2>
-        </div>
-        <div class="settings-page__status">
-          <h3>Account status: <span class="text-caribbean-green">Approved</span><span class="icon-inline">
-                <svg class="svg-icon svg-icon--caribbean-green" width="15" height="13">
-                  <use href="images/svg/svg-sprite/symbol/sprite.svg#check" x="0" y="0"></use>
-                </svg></span></h3>
+        <div class="settings-page__heading">
+          <div class="settings-page__heading-title">
+            <h2 class="text-surfie-green">Settings</h2>
+          </div>
+          <div class="settings-page__heading-status">
+            <h3>Account status: <span class="text-caribbean-green">Approved</span><span class="icon-inline">
+                  <svg class="svg-icon svg-icon--caribbean-green" width="15" height="13">
+                    <use href="images/svg/svg-sprite/symbol/sprite.svg#check" x="0" y="0"></use>
+                  </svg></span></h3>
+          </div>
+          <div class="settings-page__heading-alert">
+            <div class="alert avatar--surfie-green">
+              <div class="alert__icon"><img src="images/icons/check-circle.svg" alt="icon" /></div>
+              <div class="alert__title">Changes was saved successfuly</div>
+              <div class="alert__close">
+                <div class="close">
+                  <svg class="svg-icon svg-icon--surfie-green" width="15" height="15">
+                    <use href="images/svg/svg-sprite/symbol/sprite.svg#close" x="0" y="0"></use>
+                  </svg>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="settings-page__catalog">
           <div class="catalog">
