editable-text component was fixed

--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -26,8 +26,8 @@
               <div class="header__navigation js-header-navigation">
                 <div class="navigation">
                   <div class="navigation__items">
-                    <div class="navigation__item"><a class="navigation__link " href="#">Employers</a></div>
-                    <div class="navigation__item"><a class="navigation__link is-active" href="#">Clients</a></div>
+                    <div class="navigation__item"><a class="navigation__link " href="employers-page.html">Employers</a></div>
+                    <div class="navigation__item"><a class="navigation__link " href="#">Clients</a></div>
                     <div class="navigation__item"><a class="navigation__link " href="#">Offices</a></div>
                     <div class="navigation__item"><a class="navigation__link " href="#">Accounting</a></div>
                     <div class="navigation__item"><a class="navigation__link " href="#">Statements</a></div>
@@ -151,18 +151,20 @@
         </div>
         <div class="settings-page__catalog">
           <div class="catalog">
-            <div class="catalog__tabs tabs js-tabs">
-              <div class="catalog__tab js-tabs-tab is-active" data-tab="general">
-                <div class="catalog__tab-title">General</div>
-              </div>
-              <div class="catalog__tab js-tabs-tab " data-tab="education">
-                <div class="catalog__tab-title">Education &amp; Files</div>
-              </div>
-              <div class="catalog__tab js-tabs-tab " data-tab="services">
-                <div class="catalog__tab-title">Services &amp; prices</div>
-              </div>
-              <div class="catalog__tab js-tabs-tab " data-tab="notifications">
-                <div class="catalog__tab-title">Notifications</div>
+            <div class="catalog__header">
+              <div class="catalog__tabs tabs js-tabs">
+                <div class="catalog__tab js-tabs-tab is-active" data-tab="general">
+                  <div class="catalog__tab-title">General</div>
+                </div>
+                <div class="catalog__tab js-tabs-tab " data-tab="education">
+                  <div class="catalog__tab-title">Education &amp; Files</div>
+                </div>
+                <div class="catalog__tab js-tabs-tab " data-tab="services">
+                  <div class="catalog__tab-title">Services &amp; prices</div>
+                </div>
+                <div class="catalog__tab js-tabs-tab " data-tab="notifications">
+                  <div class="catalog__tab-title">Notifications</div>
+                </div>
               </div>
             </div>
             <div class="catalog__content">
@@ -212,8 +214,9 @@
                             <div class="font-semibold text-silver-chalice">Name:</div>
                           </div>
                           <div class="info-list__right">
-                            <div class="editable-text js-editable-text" contenteditable="true">
-                              <div class="editable-text__title">Vaidotas Rimeikis</div>
+                            <div class="editable-text js-editable-text">
+                              <input class="input input--hidden editable-text__input" value="Vaidotas Rimeikis">
+                              <div class="editable-text__title" contenteditable="true">Vaidotas Rimeikis</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
                                   <svg class="svg-icon svg-icon--alto" width="12" height="12">
@@ -233,8 +236,9 @@
                             <div class="font-semibold text-silver-chalice">Email:</div>
                           </div>
                           <div class="info-list__right">
-                            <div class="editable-text js-editable-text" contenteditable="true">
-                              <div class="editable-text__title">lj.baranauskas@gmail.com</div>
+                            <div class="editable-text js-editable-text">
+                              <input class="input input--hidden editable-text__input" value="lj.baranauskas@gmail.com">
+                              <div class="editable-text__title" contenteditable="true">lj.baranauskas@gmail.com</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
                                   <svg class="svg-icon svg-icon--alto" width="12" height="12">
@@ -254,8 +258,9 @@
                             <div class="font-semibold text-silver-chalice">Phone:</div>
                           </div>
                           <div class="info-list__right">
-                            <div class="editable-text js-editable-text" contenteditable="true">
-                              <div class="editable-text__title">+3706891864</div>
+                            <div class="editable-text js-editable-text">
+                              <input class="input input--hidden editable-text__input" value="+3706891864">
+                              <div class="editable-text__title" contenteditable="true">+3706891864</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
                                   <svg class="svg-icon svg-icon--alto" width="12" height="12">
@@ -275,8 +280,9 @@
                             <div class="font-semibold text-silver-chalice">Native:</div>
                           </div>
                           <div class="info-list__right">
-                            <div class="editable-text js-editable-text" contenteditable="true">
-                              <div class="editable-text__title">Lithuanian</div>
+                            <div class="editable-text js-editable-text">
+                              <input class="input input--hidden editable-text__input" value="Lithuanian">
+                              <div class="editable-text__title" contenteditable="true">Lithuanian</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
                                   <svg class="svg-icon svg-icon--alto" width="12" height="12">
@@ -296,8 +302,9 @@
                             <div class="font-semibold text-silver-chalice">Address:</div>
                           </div>
                           <div class="info-list__right">
-                            <div class="editable-text js-editable-text" contenteditable="true">
-                              <div class="editable-text__title">Adres 5g.</div>
+                            <div class="editable-text js-editable-text">
+                              <input class="input input--hidden editable-text__input" value="Adres 5g.">
+                              <div class="editable-text__title" contenteditable="true">Adres 5g.</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
                                   <svg class="svg-icon svg-icon--alto" width="12" height="12">
@@ -317,8 +324,9 @@
                             <div class="font-semibold text-silver-chalice">Zip code:</div>
                           </div>
                           <div class="info-list__right">
-                            <div class="editable-text js-editable-text" contenteditable="true">
-                              <div class="editable-text__title">LT-4421</div>
+                            <div class="editable-text js-editable-text">
+                              <input class="input input--hidden editable-text__input" value="LT-4421">
+                              <div class="editable-text__title" contenteditable="true">LT-4421</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
                                   <svg class="svg-icon svg-icon--alto" width="12" height="12">
@@ -338,8 +346,9 @@
                             <div class="font-semibold text-silver-chalice">City:</div>
                           </div>
                           <div class="info-list__right">
-                            <div class="editable-text js-editable-text" contenteditable="true">
-                              <div class="editable-text__title">Vilnius</div>
+                            <div class="editable-text js-editable-text">
+                              <input class="input input--hidden editable-text__input" value="Vilnius">
+                              <div class="editable-text__title" contenteditable="true">Vilnius</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
                                   <svg class="svg-icon svg-icon--alto" width="12" height="12">
@@ -359,8 +368,9 @@
                             <div class="font-semibold text-silver-chalice">Country:</div>
                           </div>
                           <div class="info-list__right">
-                            <div class="editable-text js-editable-text" contenteditable="true">
-                              <div class="editable-text__title">Lithuania</div>
+                            <div class="editable-text js-editable-text">
+                              <input class="input input--hidden editable-text__input" value="Lithuania">
+                              <div class="editable-text__title" contenteditable="true">Lithuania</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
                                   <svg class="svg-icon svg-icon--alto" width="12" height="12">
@@ -388,8 +398,9 @@
                             <div class="font-semibold text-silver-chalice">Additional:</div>
                           </div>
                           <div class="info-list__right">
-                            <div class="editable-text js-editable-text" contenteditable="true">
-                              <div class="editable-text__title">Sample sample sample sample sample sample</div>
+                            <div class="editable-text js-editable-text">
+                              <input class="input input--hidden editable-text__input" value="Sample sample sample sample sample sample">
+                              <div class="editable-text__title" contenteditable="true">Sample sample sample sample sample sample</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
                                   <svg class="svg-icon svg-icon--alto" width="12" height="12">
@@ -456,8 +467,9 @@
                             <p class="font-semibold text-silver-chalice">Paypal:</p>
                           </div>
                           <div class="info-list__right">
-                            <div class="editable-text js-editable-text" contenteditable="true">
-                              <div class="editable-text__title">info@irina.com</div>
+                            <div class="editable-text js-editable-text">
+                              <input class="input input--hidden editable-text__input" value="info@irina.com">
+                              <div class="editable-text__title" contenteditable="true">info@irina.com</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
                                   <svg class="svg-icon svg-icon--alto" width="12" height="12">
