choose -actions-dropdown was added

--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -603,7 +603,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <button class="button button--bg-white button--shadowed" type="button">Confirm
+                                  <button class="button button--shadowed button--bg-white" type="button">Confirm
                                   </button>
                                 </form>
                                 <div class="skills-dropdown__variants">
@@ -820,7 +820,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <button class="button button--bg-white button--shadowed" type="button">Confirm
+                                  <button class="button button--shadowed button--bg-white" type="button">Confirm
                                   </button>
                                 </form>
                                 <div class="skills-dropdown__variants">
@@ -1013,7 +1013,7 @@
                             <h6>Uploaded documents: <span class="p-sm font-semibold upload-documents__header-empty text-silver-chalice">No files yet</span></h6>
                           </div>
                           <div class="upload-documents__header-button">
-                            <button class="button button--bg-white button--disabled button--shadowed" type="button"><span>Download all</span><span class="button__icon">
+                            <button class="button button--disabled button--shadowed button--bg-white" type="button"><span>Download all</span><span class="button__icon">
                                                                       <svg class="svg-icon" width="15" height="13">
                                                                         <use href="images/svg/svg-sprite/symbol/sprite.svg#download" x="0" y="0"></use>
                                                                       </svg></span>
@@ -1108,7 +1108,7 @@
                                 <p class="text-silver-chalice">Urgent (<span class="text-surfie-green">+15%</span>)</p>
                               </div>
                               <div class="row-group__item">
-                                <button class="button button--bg-white button--size-20 button--shadowed" type="button">
+                                <button class="button button--shadowed button--bg-white button--size-20" type="button">
                                   <svg class="svg-icon svg-icon--surfie-green" width="15" height="9">
                                     <use href="images/svg/svg-sprite/symbol/sprite.svg#eye" x="0" y="0"></use>
                                   </svg>
@@ -1122,7 +1122,7 @@
                                 <p class="text-silver-chalice">Rep (<span class="text-brick-red">-30%</span>)</p>
                               </div>
                               <div class="row-group__item">
-                                <button class="button button--bg-white button--size-20 button--shadowed" type="button">
+                                <button class="button button--shadowed button--bg-white button--size-20" type="button">
                                   <svg class="svg-icon svg-icon--surfie-green" width="15" height="9">
                                     <use href="images/svg/svg-sprite/symbol/sprite.svg#eye" x="0" y="0"></use>
                                   </svg>
