tooltip component was created

--- a/app/static/employers-page.html
+++ b/app/static/employers-page.html
@@ -235,7 +235,12 @@
                         <td>
                           <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
                             <div class="row-group__item">
-                              <p>EN-LT, LT, RU,</p>
+                              <div class="tooltip">
+                                <div class="tooltip__text">
+                                  <p>Creative editing</p>
+                                </div>
+                                <p>EN-LT, LT, RU,</p>
+                              </div>
                             </div>
                             <div class="row-group__item">
                               <div class="dropdown lang-combinations-dropdown js-dropdown" data-dropdown="notifications">
@@ -331,7 +336,12 @@
                         <td>
                           <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
                             <div class="row-group__item">
-                              <p>EN-LT, LT, RU,</p>
+                              <div class="tooltip">
+                                <div class="tooltip__text">
+                                  <p>Creative editing</p>
+                                </div>
+                                <p>EN-LT, LT, RU,</p>
+                              </div>
                             </div>
                             <div class="row-group__item">
                               <div class="dropdown lang-combinations-dropdown js-dropdown" data-dropdown="notifications">
@@ -493,7 +503,12 @@
                         <td>
                           <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
                             <div class="row-group__item">
-                              <p>EN-LT, LT, RU,</p>
+                              <div class="tooltip">
+                                <div class="tooltip__text">
+                                  <p>Creative editing</p>
+                                </div>
+                                <p>EN-LT, LT, RU,</p>
+                              </div>
                             </div>
                             <div class="row-group__item">
                               <div class="dropdown lang-combinations-dropdown js-dropdown" data-dropdown="notifications">
